modules/gdscript/tests/scripts/analyzer/errors/annotation_non_constant_parameter.gd
var num := 1

@export_range(num, 10) var a = 5

func test():
	pass
